# kawanarajd

./: main.py  pyproject.toml  sandbox.py
alembic/: env.py
alembic/versions/: 0a52f6f2f908_restore_foreign_key_in_dietentry_.py  0e3e1625bd50_change_type_of_dietentries_added_at_.py  1aaabe131dbb_remove_final_amount_from_sauces_table.py  1c97dcc94f1b_fix_500_characters_for_recipe_column.py  2fe9b05c0c36_create_table_dishes.py  3a85062dd2c3_change_ids_to_int_type_introduce_.py  4839a7b6d5b9_init.py  5380fb8c5406_remove_foreign_key_from_dietentry_.py  53a38baf8a3b_delete_column_recipe_for_sauces.py  6021593f4c4c_added_table_sauces.py  72236245c9b8_restore_column_id_from_table_recipes.py  832672525a01_change_column_name_in_dietentries_table_.py  9029c9633acf_change_ids_to_int_type_introduce_.py  9141530d2e6d_change_weight_column_type_to_float.py  97c2b0524723_added_recipe_500_characters_varchar_.py  a41a1d1cb476_correct_change_events_table_column_name_.py  b1ed189aead1_restore_final_amount_to_sauces_table.py  bd563b4e21e5_init.py  c1b617f514a6_change_column_name_in_dietentries_table_.py  c309bea3ba38_add_table_events.py  c39e94e9358f_change_column_type_for_table_dietentry_.py  d6dba7a7b0cc_change_column_name_in_dietentries_table_.py  dfc6c5a4fc01_rename_column_final_weigh_to_final_.py  e1416e7078e5_create_table_recipes.py  e4af93a12409_change_events_table_column_name_coffees_.py  (+1 more)
code/database/: database.py  (+1 more)
postman/: Development.postman_environment.json  Test Dishes Kawanarajd.postman_collection.json
tests/: constants.py  dishes_test.py  recipes_test.py  root_pytest.py
(+17 files in other folders)
