[tool.poetry]
name = "kawanarajd"
version = "0.1.0"
description = ""
authors = ["andrzej <andrzej.b.czajka@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
pymysql = "^1.1.1"
alembic = "^1.14.0"
cryptography = "^44.0.0"
numpy = "^2.2.1"
datetime = "^5.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
